syntax = "proto3";

option csharp_namespace = "Spravy.Authentication.Protos";

import "Protos/authentication_messages.proto";

package spravy.authentication;

service AuthenticationService {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
}